--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('https://res.cloudinary.com/dhdxnfks1/image/upload/v1742487255/shorts_fvddic.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    
 }
 
 .ribeye-regular {
@@ -21,6 +21,19 @@ body {
     font-style: normal;
   }
   
+.navbar {
+    background-color: #5085ab;
+    color: #fafafa;
+}
+
+.dropdown-menu {
+    background-color: #5085ab;
+}
+
+.dropdown-item:hover {
+    background-color: #fafafa;
+    color: #5085ab !important;
+}
 
 .welcome-text {
     background-color: rgba(250, 250, 250, 0.8);
@@ -304,6 +317,13 @@ a.category-badge > span.badge:hover {
 
 /* ------------------------------- prodcut image gallery */
 
+.product-gallery-image {
+        object-fit: cover;
+        overflow: hidden;
+        width: 100%;
+        height: 300px;
+      }
+
 .image-container {
     display: flex;
     align-items: flex-start;
@@ -324,16 +344,17 @@ a.category-badge > span.badge:hover {
 }
 
 .product-gallery {
-    display: inline-block;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+
 }
 
 .gallery-thumbnail {
     width: 80px;
     height: 80px;
     object-fit: cover;
+    overflow: hidden;
     border-radius: 5px;
-    transition: transform 0.2s ease-in-out;
 }
 
 .gallery-thumbnail:hover {
